--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
     "swagger-ui-express": "^4.5.0",
     "typeorm": "^0.3.9",
     "typeorm-transactional-cls-hooked": "git+https://github.com/jczacharia/typeorm-transactional-cls-hooked.git",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "vite": "^4.2.0",
+    "vite-plugin-node": "^3.0.2"
   },
   "devDependencies": {
     "@handfish/hygen": "^6.1.6",
